--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <title>Rakesh Vankadara</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
-
-
+  
+  <link href="https://image.flaticon.com/icons/png/512/14/14573.png" rel="icon">
+  <link href="https://image.flaticon.com/icons/png/512/14/14573.png" rel="apple-touch-icon">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -344,7 +345,7 @@
           <h4>Youtuber &amp; Backend Developer</h4>
         </div></div><div class="owl-item" style="width: 480px;"><div class="testimonial-item">
           <br><br>
-          <img src="https://btao.in/resources/images/ourteam/puniith.jpg" class="testimonial-img" alt="Punith">
+          <img src="https://btao.in/resources/images/ourteam/rahulraina.jpg" class="testimonial-img" alt="Punith">
           <h3>Rahul Ummadisetty</h3>
           <h4>Software Programmer</h4>
         </div></div><div class="owl-item" style="width: 480px;"><div class="testimonial-item">
